# rust-web-server-axum

./: .env  Cargo.toml  Cross.toml  Dockerfile  Dockerfile-x86_64-unknown-linux-musl  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
api/: Cargo.toml
api/src/: app_error.rs  app_index.rs  app_request.rs  app_response.rs  app_routes.rs  app_state.rs  consts.rs  jwt_token.rs  lib.rs  response.rs  routes.rs
api/src/adventures/: delete.rs  excel.rs  favorite.rs  get.rs  journey.rs  list.rs  mod.rs  my_list.rs  play_list.rs  response.rs  sync.rs  tabs.rs  version.rs
api/src/users/: change_password.rs  change_username.rs  login.rs  me.rs  registry.rs
auth/: Cargo.toml
auth/src/: jwt.rs  lib.rs
auth/src/authorization/: README.md  mod.rs
axum-api/: Cargo.toml
axum-api/src/: app_error.rs  app_request.rs  app_response.rs  app_routes.rs  app_state.rs  lib.rs
axum-api/src/adventures/: delete.rs  excel.rs  favorite.rs  get.rs  journey.rs  list.rs  mod.rs  my_list.rs  play_list.rs  response.rs  sync.rs  tabs.rs  version.rs
axum-api/src/users/: change_password.rs  change_username.rs  login.rs  me.rs  mod.rs  registry.rs
domain/: Cargo.toml
domain/src/: errors.rs  lib.rs  manager.rs  manager_impl.rs  utils.rs
domain/src/adventures/: errors.rs  manager.rs  manager_impl.rs  mod.rs  models.rs
domain/src/favorites/: errors.rs  manager.rs  manager_impl.rs  models.rs
domain/src/users/: errors.rs  manager.rs  manager_impl.rs  mod.rs  models.rs
extra/: Cargo.toml
extra/src/: lib.rs
extra/src/authorization/: mod.rs  rbac_policy.csv
extra/src/email/: error.rs  mod.rs
extra/src/logger/: tracing_logger.rs
extra/src/meilisearch/: connection.rs  error.rs  mod.rs  operation.rs
extra/src/redis/: connection.rs  mod.rs  operation.rs
i18n/: Cargo.toml  build.rs
i18n/languages/: en.toml  zh_CN.toml
i18n/src/: lang.rs  lib.rs
logger/: Cargo.toml
logger/src/: lib.rs  tracing_logger.rs
macros/: Cargo.toml
macros/src/: args.rs  lib.rs  util.rs
macros/src/api/: from_error.rs  mod.rs  router.rs
macros/src/repository/: from_model.rs  mod.rs
redis/: Cargo.toml
redis/src/: connection.rs  lib.rs  operation.rs
repository/: Cargo.toml  README.md
repository/migrations/: 20211026101003_my_adventures.down.sql  20211026101003_my_adventures.up.sql  20211026105715_my_adventures_add_data.down.sql  20211026105715_my_adventures_add_data.up.sql  20211027024857_my_users.down.sql  20211027024857_my_users.up.sql  20211104065043_my_adventures_add_user.down.sql  20211104065043_my_adventures_add_user.up.sql  20211105054320_my_adventures_add_title_crypto.down.sql  20211105054320_my_adventures_add_title_crypto.up.sql  20211106061227_my_favorites.down.sql  20211106061227_my_favorites.up.sql  20211114020247_my_adventures_add_fav_count.down.sql  20211114020247_my_adventures_add_fav_count.up.sql  20211129000816_my_users_unique_username.down.sql  20211129000816_my_users_unique_username.up.sql
repository/src/: lib.rs
repository/src/adventures/: mod.rs  models.rs  repo.rs  repository.rs
repository/src/db/: connection.rs  mod.rs  params.rs  query.rs  read.rs  sql_params.rs  types.rs  write.rs
repository/src/favorites/: mod.rs  models.rs  repo.rs  repository.rs
repository/src/users/: mod.rs  models.rs  repo.rs  repository.rs
search/: Cargo.toml  README.md
search/src/: lib.rs  operation.rs
search/src/adventures/: add.rs  error.rs  mod.rs  model.rs  query.rs  search.rs
search/src/meilisearch/: connection.rs  mod.rs  operation.rs
server/: Cargo.toml
server/src/: logger.rs  main.rs
server_app/: Cargo.toml
server_app/src/: main.rs
server_lib/: Cargo.toml
server_lib/src/: lib.rs
thunder-tests/: thunderEnvironment.json  thunderclient.json
thunder-tests/_db-backup/: thunderCollection.json
thunder-tests/collections/: tc_col_advenetures.json  tc_col_users.json
thunder-tests/environments/: tc_env_all.json
types/: Cargo.toml
types/src/: consts.rs  date_format.rs  lib.rs  models.rs  types.rs  validation.rs
util/: Cargo.toml  build.rs
util/src/: lib.rs
util/src/date/: error.rs  format.rs  mod.rs  timezone.rs
util/src/excel/: error.rs  mod.rs
util/src/http/: error.rs  request.rs
util/src/i18n/: lang.rs  mod.rs
util/src/i18n/languages/: en.toml  zh_CN.toml
util/src/jwt/: jwt.rs  mod.rs
vars/: Cargo.toml
vars/src/: consts.rs  lib.rs  types.rs  validation.rs
warp-api/: Cargo.toml
warp-api/src/: app_state.rs  date_format.rs  errors.rs  lib.rs  request.rs  response.rs  routes.rs
warp-api/src/adventures/: delete.rs  favorite.rs  get.rs  journey.rs  list.rs  mod.rs  my_list.rs  play_list.rs  response.rs  sync.rs  tabs.rs  version.rs
warp-api/src/users/: change_password.rs  change_username.rs  login.rs  me.rs  mod.rs  registry.rs
