[workspace]
members = [
    "warp-api",
    "repository",
    "domain",
    "types",
    "redis",
    "search",
    "axum-api",
    "server",
    "auth",
    "logger",
    "extra",
]

[profile.dev]
lto = false
opt-level = 0
overflow-checks = true
incremental = true

[profile.release]
lto = "thin"
opt-level = 'z'
overflow-checks = false
incremental = false
