[workspace]
members = [
    "repository",
    "domain",
    "vars",
    "search",
    "api",
    "server_lib",
    "server_app",
    "extra",
    "util",
]

[profile.dev]
lto = false
opt-level = 0
overflow-checks = true
incremental = true
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
opt-level = 'z'
overflow-checks = false
incremental = false
panic = "abort"
