[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vars = { path = "../vars" }
domain = { path = "../domain" }
util = { path = "../util", features = ["excel", "jwt"] }
macros = { path = "../macros" }

axum = { version = "0.5", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter", "timeout"] }
tower-http = { version = "0.2", features = ["trace", "add-extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
headers = "0.3"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
validator = { version = "0.14.0", features = ["derive"] }
http-body = "0.4"
thiserror = "1.0"
tracing = { path = "../crates/tracing", version = "0.2" }
chrono = { version = "0.4", features = ["serde"] }
once_cell = { version = "1" }
