[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types", features = ["postgres"] }
jsonwebtoken = "7"
once_cell = "1.8.0"
chrono = "0.4.19"
serde = "1.0.125"
warp = "0.3"
thiserror = "1.0.30"
