[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["jwt"]
authorization = ["tokio", "casbin"]
jwt = ["jsonwebtoken"]

[dependencies]
types = { path = "../types" }
i18n = { path = "../i18n" }
# jwt
jsonwebtoken = { version = "7", optional = true }
# casbin
casbin = { version = "2.0.9", default-features = false, features = [
    "runtime-async-std",
    "logging",
    "incremental",
], optional = true }
tokio = { version = "1", optional = true }

once_cell = "1.9.0"
chrono = "0.4.19"
serde = "1.0.125"
warp = "0.3"
thiserror = "1.0.30"
tracing = { path = "../crates/tracing", version = "0.2" }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
