[package]
name = "axum-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
postgres = []
mysql = []

[dependencies]
types = { path = "../types", features = ["postgres"] }
domain = { package = "domain", path = "../domain", features = ["postgres"] }
axum = { version = "0.2.8" }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
tower-http = { version = "0.1", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexi_logger = "0.19.3"
log = "0.4"
jsonwebtoken = "7"
headers = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
hyper = { version = "0.14", features = ["full"] }
