[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "domain"
path = "src/lib.rs"

[features]
postgres = []
mysql = []

[dependencies]
types = { path = "../types", features = ["postgres"] }
repository = { path = "../repository", features = ["postgres"] }
redis = { path = "../redis" }
search = { path = "../search", features = ["postgres"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"
async-trait = "0.1"
flexi_logger = "0.19.3"
log = "0.4"
anyhow = "1.0.44"
meilisearch-sdk = { version = "0.11.0", default-features = false, features = [
    "sync",
] }
