[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
types = { path = "../types" }
repository = { path = "../repository" }
redis = { path = "../redis" }
search = { path = "../search" }
i18n = { path = "../i18n" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.30"
async-trait = "0.1"
anyhow = "1.0.44"
meilisearch-sdk = { version = "0.13.0", default-features = false, features = [
    "sync",
] }
base64 = "0.13"
ring = "0.16"
tracing = { path = "../crates/tracing", version = "0.2" }
