[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
vars = { path = "../vars" }
repository = { path = "../repository" }
search = { path = "../search" }
util = { path = "../util" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"
base64 = "0.21"
ring = "0.17"
tracing = { version = "0.1" }
