[package]
name = "extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
lib_email = ["lettre"]
lib_redis = ["redis"]
lib_meilisearch = ["meilisearch-sdk", "serde", "serde_json"]
lib_authorization = ["tokio", "casbin"]

[dependencies]
# email
lettre = { version = "0.10.2", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1-rustls-tls",
    "tokio1",
    "pool",
], optional = true }

# redis
redis = { version = "0.22.3", features = [
    "connection-manager",
    "tokio-comp",
], optional = true }

# meilisearch
meilisearch-sdk = { version = "0.22", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# casbin
casbin = { version = "2.0.9", default-features = false, features = [
    "runtime-async-std",
    "logging",
    "incremental",
], optional = true }
tokio = { version = "1", optional = true }

# logger
time = "0.3"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = { version = "0.2" }

util = { path = "../util", default-features = false }
once_cell = "1.10.0"
thiserror = "1.0"
