[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
once_cell = "1.8.0"

tracing = { path = "../crates/tracing", version = "0.2" }
tracing-subscriber = { path = "../crates/tracing-subscriber", version = "0.3", features = [
    "env-filter",
    "json",
] }
tracing-appender = { path = "../crates/tracing-appender" }
