[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.2", features = ["connection-manager", "tokio-comp"] }
once_cell = "1.8.0"
flexi_logger = "0.20"
log = "0.4"
