[package]
name = "repository"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
types = { path = "../types", features = ["postgres"] }
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
flexi_logger = "0.19"
log = "0.4"
sql-builder = "3.1.1"
once_cell = "1.8.0"
meilisearch-sdk = { version = "0.11.0", default-features = false, features = [
    "sync",
] }
