[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "repository"
path = "src/lib.rs"

[dependencies]
types = { path = "../types" }
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "postgres",
] }
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
sql-builder = "3.1.1"
once_cell = "1.8.0"
meilisearch-sdk = { version = "0.15.0", default-features = false, features = [
    "sync",
] }
tracing = { path = "../crates/tracing", version = "0.2" }
