[package]
name = "search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = []
mysql = []

[dependencies]
types = { path = "../types", features = ["postgres"] }
meilisearch-sdk = { version = "0.11.0", default-features = false, features = [
    "sync",
] }

once_cell = "1.8.0"
flexi_logger = "0.19.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
