[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
meilisearch-sdk = { version = "0.11.0", default-features = false, features = [
    "sync",
] }

once_cell = "1.8.0"
flexi_logger = "0.20"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
