[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vars = { path = "../vars" }
extra = { path = "../extra", features = ["lib_meilisearch"] }
util = { path = "../util", default-features = false }

serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1" }
thiserror = "1.0"
