[package]
name = "server"
version = "0.1.0"
edition = "2021"
autotests = false
authors = ["Simon Osaka <geniusmickymouse@qq.com>"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "A example of rust web server to develop api"
repository = "https://github.com/SimonOsaka/rust-web-server-example"
documentation = ""
homepage = ""
keywords = ["web", "api", "db"]
categories = []
license = "MIT"
readme = "README.md"

[[bin]]
bench = false
path = "src/main.rs"
name = "app"

[features]
default = ["database_lib", "search_lib", "api_warp_lib"]
redis_lib = ["redis"]
database_lib = ["repository"]
search_lib = ["search"]
api_warp_lib = ["warp-api"]
api_axum_lib = ["axum-api"]
extra_lib = ["extra/email"]
auth_lib = ["auth/authorization", "auth/jwt"]
# Append to default
# command: RUSTFLAGS="--cfg tokio_unstable" cargo run
tokio_console = ["tokio/tracing", "console-subscriber"]

[dependencies]
axum-api = { path = "../axum-api", optional = true }
warp-api = { path = "../warp-api", optional = true }
redis = { path = "../redis", optional = true }
repository = { path = "../repository", optional = true }
search = { path = "../search", optional = true }
extra = { path = "../extra", optional = true }
logger = { path = "../logger" }
auth = { path = "../auth", optional = true }
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros"] }
console-subscriber = { version = "0.1", optional = true }
