[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
meilisearch-sdk = { version = "0.11.0", default-features = false, features = [
    "sync",
] }
