[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["local"]
local = ["Shanghai"]
# timezone list
Shanghai = []
Hawaii = []

[dependencies]
time = { version = "0.3", features = ["local-offset", "formatting", "parsing"] }
once_cell = "1.10.0"
thiserror = "1.0"
