[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# excel
excel = ["xlsxwriter", "uuid"]
# date
date = ["local", "time", "once_cell"]
local = ["Shanghai"]
# timezone list
Shanghai = []
Hawaii = []

[dependencies]
thiserror = "1.0"

# date
time = { version = "0.3", features = [
    "local-offset",
    "formatting",
    "parsing",
], optional = true }
once_cell = { version = "1.10.0", optional = true }

# excel
xlsxwriter = { version = "0.3.5", optional = true }
uuid = { version = "0.8", features = ["v4"], optional = true }
