[package]
name = "vars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0" }
validator = { version = "0.14.0", features = ["derive"] }
tracing = { path = "../crates/tracing", version = "0.2" }
