[package]
name = "warp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
postgres = []
mysql = []

[dependencies]
types = { path = "../types", features = ["postgres"] }
domain = { package = "domain", path = "../domain", features = ["postgres"] }
auth = { path = "../auth" }
warp = "0.3"
chrono = "0.4.19"
flexi_logger = "0.19.3"
log = "0.4"
serde = "1.0.125"
serde_derive = "1.0.125"
async-trait = "0.1"
