[package]
name = "warp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
domain = { path = "../domain" }
auth = { path = "../auth" }
warp = "0.3"
chrono = "0.4.19"
flexi_logger = "0.19.3"
log = "0.4"
serde = "1.0.125"
serde_derive = "1.0.125"
async-trait = "0.1"
thiserror = "1.0"
validator = { version = "0.14.0", features = ["derive"] }
